Acréscimo de estilo no index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>    
     <body>
 
-        <div class="quadro_opcoes" style="margin: 0 auto;">
+        <div class="container" style="box-shadow: 2px 2px 2px 1px rgba(0,0,0,.4); padding: 10px; width: 500px;">
 
             <h1>Escolher opções</h1>
 
@@ -29,7 +29,8 @@
             <label for="vehicle2"> Item 2</label><br>
             <input type="checkbox" name="vehicle3" value="Boat" checked>
             <label for="vehicle3"> Item 3</label><br><br>
-            <input type="submit" value="Submit">
+            <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
+            <label class="btn btn-primary" for="btn-check-2">Enviar</label>
             
             </form>
 
