--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
             <h1>Escolher opções</h1>
 
-            <form action="/action_page.php">
+            <form action="action_page.php">
             <p>Favor selecionar o que prefere:</p>
-              <input type="radio" id="html" name="fav_language" value="Opção 1">
-              <label for="html">Opção 1</label><br>
-              <input type="radio" id="css" name="fav_language" value="Opção 2">
-              <label for="css">Opção 2</label><br>
-              <input type="radio" id="javascript" name="fav_language" value="Opção 3">
-              <label for="javascript">Opção 3</label>
+              <input type="radio" id="opcao1" name="fav_language" value="Opção 1">
+              <label for="opcao1">Opção 1</label><br>
+              <input type="radio" id="opcao2" name="fav_language" value="Opção 2">
+              <label for="opcao2">Opção 2</label><br>
+              <input type="radio" id="opcao3" name="fav_language" value="Opção 3">
+              <label for="opcao3">Opção 3</label>
 
             <br>  
 
             <p>Selecione mais de uma opção a seguir:</p>
-            <input type="checkbox" name="vehicle1" value="1">
+            <input type="checkbox" name="primeiro" value="1">
             <label for="item1"> Item 1</label><br>
-            <input type="checkbox" name="vehicle2" value="2">
+            <input type="checkbox" name="segundo" value="2">
             <label for="item2"> Item 2</label><br>
-            <input type="checkbox" name="vehicle3" value="3">
+            <input type="checkbox" name="terceiro" value="3">
             <label for="item3"> Item 3</label><br><br>
             <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
             <label class="btn btn-primary" for="btn-check-2">Enviar</label>
