--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <br>  
 
             <p>Selecione mais de uma opção a seguir:</p>
-            <input type="checkbox" name="fav_item1" value="true">
+            <input type="checkbox" id="item1" name="fav_item[]" value="1">
             <label for="item1"> Item 1</label><br>
-            <input type="checkbox" name="fav_item2" value="true">
+            <input type="checkbox" id="item2" name="fav_item[]" value="2">
             <label for="item2"> Item 2</label><br>
-            <input type="checkbox" name="fav_item3" value="true">
+            <input type="checkbox" id="item3" name="fav_item[]" value="3">
             <label for="item3"> Item 3</label><br><br>
-            <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
             
+            <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">            
             <input class="btn btn-primary" for="btn-check-2"  type="submit" value="Enviar">
             
             </form>
