--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
             <form action="action_page.php" method="POST" >
             <p>Favor selecionar o que prefere:</p>
-              <input type="radio" id="opcao1" name="fav_option" value="1">
+              <input type="radio" id="opcao1" name="fav_option" class="form-check-label" value="1" required="required">
               <label for="opcao1">Opção 1</label><br>
-              <input type="radio" id="opcao2" name="fav_option" value="2">
+              <input type="radio" id="opcao2" name="fav_option" class="form-check-label" value="2" required="required">
               <label for="opcao2">Opção 2</label><br>
-              <input type="radio" id="opcao3" name="fav_option" value="3">
+              <input type="radio" id="opcao3" name="fav_option" class="form-check-label" value="3" required="required">
               <label for="opcao3">Opção 3</label>
 
             <br>  
 
-            <p>Selecione mais de uma opção a seguir:</p>
-            <input type="checkbox" id="item1" name="fav_item[]" value="1">
+            <p>Selecione uma ou mais opções a seguir:</p>
+            <input type="checkbox" id="item1" name="fav_item[]" class="form-checkbox-label" value="1" required="required">
             <label for="item1"> Item 1</label><br>
-            <input type="checkbox" id="item2" name="fav_item[]" value="2">
+            <input type="checkbox" id="item2" name="fav_item[]" class="form-checkbox-label" value="2" required="required">
             <label for="item2"> Item 2</label><br>
-            <input type="checkbox" id="item3" name="fav_item[]" value="3">
+            <input type="checkbox" id="item3" name="fav_item[]" class="form-checkbox-label" value="3" required="required">
             <label for="item3"> Item 3</label><br><br>
             
             <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">            
