--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <br>  
 
             <p>Selecione uma ou mais opções a seguir:</p>
-            <input type="checkbox" id="item1" name="fav_item[]" class="form-checkbox-label" value="1" required="required">
+            <input type="checkbox" id="item1" name="fav_item[]" class="form-checkbox" value="1" required="required">
             <label for="item1"> Item 1</label><br>
-            <input type="checkbox" id="item2" name="fav_item[]" class="form-checkbox-label" value="2" required="required">
+            <input type="checkbox" id="item2" name="fav_item[]" class="form-checkbox" value="2" required="required">
             <label for="item2"> Item 2</label><br>
-            <input type="checkbox" id="item3" name="fav_item[]" class="form-checkbox-label" value="3" required="required">
+            <input type="checkbox" id="item3" name="fav_item[]" class="form-checkbox" value="3" required="required">
             <label for="item3"> Item 3</label><br><br>
             
             <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">            
